# config-sever

./: Cargo.toml  Dockerfile  README.md  bitbucket-pipelines.yml
conf/: default.toml
resurce/im/prod/: v1.yml
src/: main.rs  mods.rs  settings.rs
src/controllers/: config_controllers.rs  ping_controllers.rs
src/utils/: utils.rs
